# dynamic-dictionary

./: CMakeLists.txt  README.md  dynamic_dictionary.hpp
examples/: CMakeLists.txt  config_example.txt  example0.cpp
include/: dictionary.hpp  dictionary_json.hpp  dictionary_serialization.hpp
tests/: CMakeLists.txt  tests.cpp
